# IARC-2020

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .travis.yml  LICENSE  Pipfile  README.md  State.py  communication.py  flight_manager.py  logger.py  mypy.ini  pylintrc  pyproject.toml  results.csv  run.py  test_camera.py  test_run_camera.py
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: build-feature.yml  main.yml
flight/: README.md  __init__.py  config.py  flight.py  run.py  state_settings.py
flight/states/: Final.py  Land.py  RunLaps.py  Start.py  State.py  Takeoff.py  __init__.py  approach_lap.py  detect_module.py  early_laps.py  escape_lap.py  exit_early_lap.py  exit_return_lap.py  final.py  hook_maneuver.py  land.py  mast.py  orbit_mast.py  return_laps.py  run_laps.py  simple_takeoff.py  start.py  state.py  takeoff.py  to_mast.py
flight/utils/: Wrapped_LAC.py  Wrapped_Movement.py  drone_takeoff.py  lac.py  movement.py  movement_controller.py  param.txt
integration_tests/: full_test.py  mast_travel.py  module_detection.py  pylon_laps.py  takeoff_and_land.py  test_mast_text.py  test_module.py
realsense/: read_bag_example.py  stream_depth_color.py
segment_tests/: mast_travel.py  module_detection.py  pylon_laps.py  test_camera.py  test_mast_text.py  test_module.py
vision/: ModuleInFrame.py  ModuleKMeans.py  README.md  UnitTest.py  Unittest.py  __init__.py  bounding_box.py  failure_flags.py  interface.py  pipeline.py  rectangle.py  requirements.txt
vision/Blobdetection/: simpleDetection.py
vision/benchmarks/: README.md  (+6 more)
(+144 files in other folders)
